# NTRTsim

./: .gitignore  INSTALL
NTRTsim_logs/: liveplotter.ipynb  liveplotter.py  renamer.py  singlesimplotter.py  sweepanalysis.ipynb  sweepanalysis.py
NTRTsim_logs/plots/: README.txt
NTRTsim_logs/plots/3A400Knicejumpnomax/: Energy_Stored_in_Springs_Over_Time.html  README.txt  y_position_vs_time.html
NTRTsim_logs/plots/3AsweepK50N/: README.txt
NTRTsim_logs/plots/400k55NA/: Energy_Stored_in_Springs_Over_Time.html  y_position_vs_time.html
NTRTsim_logs/plots/4ACNCmax500N/: Energy_Stored_in_Springs_Over_Time.html  README.txt  y_position_vs_time.html
NTRTsim_logs/plots/4ACNCstiffnesssweep/: sim1.csv  sim10.csv  sim100.csv  sim101.csv  sim11.csv  sim12.csv  sim13.csv  sim14.csv  sim15.csv  sim16.csv  sim17.csv  sim18.csv  sim19.csv  sim2.csv  sim20.csv  sim21.csv  sim22.csv  sim23.csv  sim24.csv  sim25.csv  sim26.csv  sim27.csv  sim28.csv  sim29.csv  sim3.csv  sim30.csv  sim31.csv  sim32.csv  sim33.csv  sim34.csv  sim35.csv  sim36.csv  sim37.csv  sim38.csv  sim39.csv  sim4.csv  sim40.csv  sim41.csv  (+63 more)
NTRTsim_logs/to_plot/: sim1.txt  sim4.csv  sim5.csv  sim6.csv
src/dev/: CMakeLists.txt
src/dev/dariostuff/: AppisocDarYAML.cpp  CMakeLists.txt  LengthControllerdarYAML.cpp  LengthControllerdarYAML.h  README.txt
src/dev/dariostuff/directional_both/: AppisocDarYAMLdir.cpp  CMakeLists.txt  GA.py  LengthControllerdarYAMLdir.cpp  LengthControllerdarYAMLdir.h  learningBayesian.py  run.sh  write_sh.py
src/dev/dariostuff/directional_jump/: AppisocDarYAML.cpp  AppisocDarYAMLdir.cpp  CMakeLists.txt  LengthControllerdarYAML.cpp  LengthControllerdarYAMLdir.cpp  LengthControllerdarYAMLdir.h  run.sh  write_sh.py
src/dev/dariostuff/directional_jumppretension/: AppisocDarYAMLdir.cpp  CMakeLists.txt  LengthControllerdarYAMLdir.cpp  LengthControllerdarYAMLdir.h  run.sh  write_sh.py
src/dev/dariostuff/manual_controller/: AppisocDarYAMLmanual.cpp  CMakeLists.txt  LengthControllerdarYAMLmanual.cpp  LengthControllerdarYAMLmanual.h  run.sh
src/dev/dariostuff/models/: iso.yaml  iso1A.yaml  iso3A.yaml  iso3ANC.yaml  iso3Aext.yaml  iso3Aextcentr.yaml  iso3Aextendcap.yaml  iso4ACNC.yaml  isodrop.yaml  isodrop3Aext.yaml  isodropsmall.yaml  isorealsmallmodel.yaml
src/dev/dariostuff/streight_jump/: AppisocDarYAML.cpp  LengthControllerdarYAML.cpp  run.sh
(+211 files in other folders)
